<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vehicle_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vehicle_form">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="411dp"
        android:layout_height="581dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="128dp"
                android:layout_height="104dp"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="28dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="145dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="28dp"

                android:text="@string/vehicletype" />

            <RadioGroup
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/car"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:checked="false"
                    android:text="@string/catrd" />

                <RadioButton
                    android:id="@+id/jeep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/jeeprd" />

                <RadioButton
                    android:id="@+id/bike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/bikerd" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="28dp"

                android:text="@string/price" />

            <EditText
                android:id="@+id/price"
                android:layout_width="232dp"
                android:layout_height="50dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:ems="10"
                android:inputType="number" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="28dp"
                android:text="@string/brand" />

            <EditText
                android:id="@+id/brand"
                android:layout_width="228dp"
                android:layout_height="50dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:ems="10"
                android:inputType="textPersonName" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="24dp"
                android:text="@string/model" />

            <EditText
                android:id="@+id/model"
                android:layout_width="228dp"
                android:layout_height="50dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="28dp"
                android:text="@string/edition" />

            <EditText
                android:id="@+id/edition"
                android:layout_width="228dp"
                android:layout_height="50dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="99dp"
                android:layout_height="36dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="24dp"
                android:text="@string/condition" />


            <RadioGroup
                android:id="@+id/condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                android:id="@+id/brandnew"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/brandNew" />

            <RadioButton
                android:id="@+id/used"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/used" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="32dp"
                android:text="@string/transmission" />


            <RadioGroup
                android:id="@+id/transmssion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                android:id="@+id/auto"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:checked="false"
                android:text="@string/automatic" />

            <RadioButton
                android:id="@+id/manual"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/manual" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="28dp"
                android:text="@string/fuel" />

            <RadioGroup
                android:id="@+id/fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                android:id="@+id/petrol"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:checked="false"
                android:text="@string/petrol" />

            <RadioButton
                android:id="@+id/diesel"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/diesel" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="150dp"
                android:layout_height="37dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="44dp"
                android:text="@string/engine" />

            <EditText
                android:id="@+id/engine"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="150dp"
                android:layout_height="37dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="44dp"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:inputType="number" />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/post" />




        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>